Add NumberInputForm component

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,3 +4,4 @@ $main_text_color: rgb(73, 76, 80);
 $hover_color: rgb(46, 92, 208);
 $active_color: rgb(24, 67, 178);
 $close_btn_color: rgb(52, 64, 80);
+$border_color: rgb(183, 183, 183);
