--- a/src/components/ScheduleModal/styles.module.scss
+++ b/src/components/ScheduleModal/styles.module.scss
@@ -18,5 +18,9 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    &_dates{
+      display: flex;
+      justify-content: space-between;
+    }
   }
 }
