Add block with timetable

--- a/src/components/FormComponents/NumberInputForm/styles.module.scss
+++ b/src/components/FormComponents/NumberInputForm/styles.module.scss
@@ -34,6 +34,7 @@
     text-align: center;
     color: $main_text_color;
     max-width: 150px;
+    outline: none;
   }
   span{
     border-left: 1px solid $border_color;
