Add block with additional information

--- a/src/components/ScheduleModal/styles.module.scss
+++ b/src/components/ScheduleModal/styles.module.scss
@@ -23,6 +23,9 @@
       display: flex;
       justify-content: space-between;
     }
-    
+    &_additional{
+      display: flex;
+      gap: 30px;
+    }
   }
 }
