--- a/src/components/ScheduleModal/styles.module.scss
+++ b/src/components/ScheduleModal/styles.module.scss
@@ -33,5 +33,21 @@
     border-top: 1px solid $border_color;
     display: flex;
     justify-content: flex-end;
+    gap: 20px;
+    &_cancelBtn{
+      background: none;
+      color: $main_text_color;
+      font-size: 16px;
+      cursor: pointer;
+      padding: 15px;
+      border-radius: 4px;
+      &:hover{
+        background: $border_color;
+        color: $secondary_color;
+      }
+      &:active{
+        background: $main_text_color
+      }
+    }
   }
 }
