Add calculation for data picker and fix some buds

--- a/src/components/AddBtn/styles.module.scss
+++ b/src/components/AddBtn/styles.module.scss
@@ -7,6 +7,7 @@
   text-align: center;
   border-radius: 4px;
   font-size: 16px;
+  cursor: pointer;
   &:hover{
     background-color: $hover_color;
     color: $secondary_color;
